2002-10-18  Philippe Elie  <phil.el@wanadoo.fr>

	* libutill++/child_reader.cpp: read_block() : cumulate stderr
	  output rather to overwrite always the same buffer space ...

2002-10-16  John Levon  <levon@movementarian.org>

	* utils/op_start_25: check if mounted, from Will Cohen
	Also mkdir the mountpoint 
 
2002-10-16  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: get linux include path earlier

2002-10-15  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/oprofiled.c:
	* daemon/oprofiled: strerrno --> strerror

2002-10-14  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_events.c: typo in L2_DBUS_BUSY_RD PPro event name

2002-10-13  Philippe Elie  <phil.el@wanadoo.fr>

	* README: update contrib
	* TODO: update

	* gui/oprof_start.cpp: better error message, fixme removal

	* libdb/db-insert.c: fix samples count overflow.

	* libdb/db.h:
	* libdb/db-manage.c:
	* libdb/db-debug.c: don't use page zero, use this value as nil page
	  number, avoid to touch mmaped memory when growing the samples file.
	* libop/op_config.h: bump OPD_VERSION

2002-10-12  Philippe Elie  <phil.el@wanadoo.fr>

	* pp/samples_file.h:
	* pp/samples_file.cpp: move class opp_samples_files ...
	* pp/opp_samples_files.h:
	* pp/opp_samples_files.cpp: to these new files

	* pp/Makefile.in:
	* pp/op_to_source.cpp:
	* pp/oprofpp.cpp: reflect above change

2002-10-12  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_sample_files.c: fixme remove
	* dae/oprofiled.c:
	* daemon/oprofiled.c: minor error message improvement

	* pp/op_time.cpp:
	* pp/symbol_container.cpp: fixme remove
	
	* pp/samples_file.cpp:
	* pp/sample_file.h: privatize more data members

2002-10-12  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/utility.h: op_ratio() new
	* pp/op_time.cpp:
	* pp/op_to_source.cpp:
	* pp/opp_symbol.cpp:
	* pp/samples_container.cpp: use op_ratio()

2002-10-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libutil++/file_manip.cpp:
	* libutil++/filename_match.cpp:
	* libutil++/string_manip.cpp: